@@ -1,1 +1,0 @@
-MD5 c83dce8cc496b6ec8773483df1c85119 kdenetwork-3.5.0.tar.bz2 7452959
