@@ -1,13 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-filesharing/kdenetwork-filesharing-3.5.1.ebuild,v 1.2 2006/03/27 23:34:18 agriffis Exp $
-
-KMNAME=kdenetwork
-KMMODULE=filesharing
-MAXKDEVER=$PV
-KM_DEPRANGE="$PV $MAXKDEVER"
-inherit kde-meta eutils
-
-DESCRIPTION="kcontrol filesharing config module for NFS, SMB etc"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE=""
