@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdenetwork-filesharing
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-filesharing/ChangeLog,v 1.37 2006/03/27 23:34:18 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-filesharing/ChangeLog,v 1.38 2006/04/06 01:30:50 flameeyes Exp $
+
+  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
+  -kdenetwork-filesharing-3.5.0.ebuild,
+  -kdenetwork-filesharing-3.5.1.ebuild:
+  Removed old 3.5.0/3.5.1 packages.
 
   27 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   kdenetwork-filesharing-3.5.0.ebuild, kdenetwork-filesharing-3.5.1.ebuild,
